# Rtorchcpp

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  DESCRIPTION.in  NAMESPACE  README.md  README.md.in  configure  configure.ac
R/: RcppExports.R  catch-routine-registration.R  roxygen.R
cmake/: FindR.cmake
src/: RcppExports.cpp  addition.cpp  addition.h  hello-world.cpp  test-example.cpp
tests/: testthat.R
tests/testthat/: test-cpp.R  test-hello-world.R
